--- a/astroid/.config/astroid/config
+++ b/astroid/.config/astroid/config
@@ -92,9 +92,9 @@
         }
     },
     "saved_searches": {
-        "show_on_startup": "false",
+        "show_on_startup": "true",
         "save_history": "true",
-        "history_lines_to_show": "15",
+        "history_lines_to_show": "1",
         "history_lines": "1000"
     },
     "accounts": {
@@ -119,8 +119,6 @@
     },
     "startup": {
         "queries": {
-            "inbox": "tag:inbox or tag:unread",
-            "flagged": "tag:flagged"
         }
     }
 }
