--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,9 +35,9 @@ setw -g mode-keys vi
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
 # set -g mouse-select-window onbetween panes
-bind-key -t vi-copy 'v' begin-selection     # Begin selection in copy mode.
-bind-key -t vi-copy 'C-v' rectangle-toggle  # Begin selection in copy mode.
-bind-key -t vi-copy 'y' copy-selection      # Yank selection in copy mode.
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle  # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection      # Yank selection in copy mode.
 
 # force a reload of the config file
 unbind r
