tmux: set terminal title based on pane
again for use in my window logger

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,6 +17,9 @@ set-window-option -g pane-base-index 1
 # Use vim keybindings
 setw -g mode-keys vi
 
+# set terminal title
+set -g set-titles on
+
 # Setup 'v' to begin selection as in Vim
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
