--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -25,11 +25,15 @@ rofi.hide-scrollbar: true
 ! ROFI Color theme
 ! ------------------------------------------------------------------------------
 rofi.color-enabled: true
-rofi.color-window: #263238, #33708f, argb:8933708f
-rofi.color-normal: #263238, #eceff1, argb:5c263238, argb:cc33708f, #eceff1
-rofi.color-active: #263238, #eceff1, #263238, #33708f, #fdf6e3
-rofi.color-urgent: #263238, #dc322f, #263238, #dc322f, #fdf6e3rofi.color-urgent: #fdf6e3, #dc322f, #eee8d5, #dc322f, #fdf6e3
-
+!                     bg       fg       bgalt    hlbg     hlfg
+# rofi.color-window: #263238, #33708f, argb:8933708f
+# rofi.color-normal: #263238, #eceff1, argb:5c263238, argb:cc33708f, #eceff1
+# rofi.color-active: #263238, #eceff1, #263238, #33708f, #fdf6e3
+# rofi.color-urgent: #263238, #dc322f, #263238, #dc322f, #fdf6e3rofi.color-urgent: #fdf6e3, #dc322f, #eee8d5, #dc322f, #fdf6e3
+rofi.color-window: #2F3841, #2257A0, #2257A0
+rofi.color-normal: #2F3841, #8FA1B3, #2257A0, #2257A0, #2257A0
+rofi.color-active: #2F3841, #8FA1B3, #2257A0, #2257A0, #2257A0
+rofi.color-urgent: #2F3841, #dc322f, #263238, #dc322f, #fdf6e3rofi.color-urgent: #fdf6e3, #dc322f, #eee8d5, #dc322f, #fdf6e3
 
 ! ------------------------------------------------------------------------------
 ! ROFI keybindings
