--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 /fish/.config/fish/fish_history
 /fish/.config/fish/fishd.*
+
 *.pyc
+
 /astroid/.config/astroid/searches
+
 /spacemacs/.emacs.d/private/orgmode.el
+
+/emacs/.emacs.d/*
+!/emacs/.emacs.d/init.el
+!/emacs/.emacs.d/personal
