tmux: can't remember

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -109,4 +109,4 @@ bind-key l select-pane -R
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-set-option -g default-shell "/usr/bin/fish"
+#set-option -g default-shell "/usr/bin/fish"
